# obras

./: README.md  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: python-app.yml
arte/: admin.py  models.py  serializers.py  urls.py  views.py
arte/migrations/: 0001_initial.py  0002_obra.py  0003_alter_autor_cpf_alter_obra_autores.py
base/migrations/: 0001_initial.py
contrib/: env-sample
obras/: asgi.py  settings.py  urls.py  wsgi.py
obras/arte/: admin.py  apps.py  serializers.py  urls.py  views.py
obras/arte/migrations/: 0004_alter_obra_data_de_exposicao_and_more.py
obras/base/: apps.py
obras/tests/: conftest.py
obras/tests/arte/: test_api_autor.py  test_api_obra.py  test_models.py
tests/: conftest.py
tests/arte/: test_api_autor.py  test_models.py
